clusters/home/apps/openwebui/openwebui/configs/openwebui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-ingressroute
  namespace: openwebui
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://openwebui.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Openwebui
    gethomepage.dev/group: AI
    gethomepage.dev/icon: mdi-application
    gethomepage.dev/app: openwebui # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Openwebui
    #gethomepage.dev/widget.type: "openwebui"
    #gethomepage.dev/widget.url: "https://openwebui.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`openwebui.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: openwebui-open-webui
      port: 80
    middlewares:
      - name: authentik-service-middleware
        namespace: authentik
  tls:
    secretName: openwebui-certificate-secret
